--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,57 @@
 ---
 kind: pipeline
 type: docker
+name: test
+
+steps:
+  - name: format-check
+    image: rust:1.93
+    commands:
+      - rustup component add rustfmt
+      - cargo fmt -- --check
+
+  - name: clippy
+    image: rust:1.93
+    volumes:
+      - name: cargo-registry
+        path: /usr/local/cargo/registry
+    environment:
+      CARGO_BUILD_JOBS: 1
+    commands:
+      - rustup component add clippy
+      - cargo clippy --all-targets --no-deps -- -D warnings
+
+  - name: test
+    image: rust:1.93
+    volumes:
+      - name: cargo-registry
+        path: /usr/local/cargo/registry
+      - name: cargo-git
+        path: /usr/local/cargo/git
+      - name: target
+        path: /drone/src/target
+    environment:
+      CARGO_BUILD_JOBS: 1
+      CARGO_INCREMENTAL: 0
+      RUST_MIN_STACK: 8388608
+    commands:
+      - echo "Running tests in release mode (optimized for memory)..."
+      - cargo test --all --release -- --test-threads=1
+
+volumes:
+  - name: cargo-registry
+    host:
+      path: /tmp/drone-cargo-registry
+  - name: cargo-git
+    host:
+      path: /tmp/drone-cargo-git
+  - name: target
+    host:
+      path: /tmp/drone-target
+
+---
+kind: pipeline
+type: docker
 name: build-and-deploy
 
 trigger:
@@ -24,12 +75,12 @@ steps:
       - echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
       - docker buildx create --use --name drone-builder || true
       - docker buildx build
-          --cache-from type=registry,ref=ghcr.io/leocalm/piggypulse-api:buildcache
-          --cache-to type=registry,ref=ghcr.io/leocalm/piggypulse-api:buildcache,mode=max
-          --tag ghcr.io/leocalm/piggypulse-api:latest
-          --tag ghcr.io/leocalm/piggypulse-api:${DRONE_COMMIT_SHA:0:7}
-          --push
-          .
+        --cache-from type=registry,ref=ghcr.io/leocalm/piggypulse-api:buildcache
+        --cache-to type=registry,ref=ghcr.io/leocalm/piggypulse-api:buildcache,mode=max
+        --tag ghcr.io/leocalm/piggypulse-api:latest
+        --tag ghcr.io/leocalm/piggypulse-api:${DRONE_COMMIT_SHA:0:7}
+        --push
+        .
 
   - name: build-cron
     image: docker:dind
@@ -45,13 +96,13 @@ steps:
       - echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
       - docker buildx create --use --name drone-builder || true
       - docker buildx build
-          --cache-from type=registry,ref=ghcr.io/leocalm/piggypulse-cron:buildcache
-          --cache-to type=registry,ref=ghcr.io/leocalm/piggypulse-cron:buildcache,mode=max
-          --tag ghcr.io/leocalm/piggypulse-cron:latest
-          --tag ghcr.io/leocalm/piggypulse-cron:${DRONE_COMMIT_SHA:0:7}
-          --file Dockerfile.cron
-          --push
-          .
+        --cache-from type=registry,ref=ghcr.io/leocalm/piggypulse-cron:buildcache
+        --cache-to type=registry,ref=ghcr.io/leocalm/piggypulse-cron:buildcache,mode=max
+        --tag ghcr.io/leocalm/piggypulse-cron:latest
+        --tag ghcr.io/leocalm/piggypulse-cron:${DRONE_COMMIT_SHA:0:7}
+        --file Dockerfile.cron
+        --push
+        .
 
   - name: deploy
     image: docker:27-cli
@@ -83,8 +134,8 @@ steps:
         - success
     commands:
       - echo "✅ Build ${DRONE_BUILD_NUMBER} completed successfully!"
-      - echo "📦 Tests passed, images built, deployed to production!"
-      
+      - echo "📦 Version ${DRONE_COMMIT_SHA:0:7} deployed to production"
+
   - name: notify-failure
     image: alpine:latest
     when:
@@ -92,7 +143,7 @@ steps:
         - failure
     commands:
       - echo "❌ Build ${DRONE_BUILD_NUMBER} failed!"
-      - echo "Tests or build failed - nothing deployed"
+      - echo "Commit ${DRONE_COMMIT_SHA:0:7} was not deployed"
 
 volumes:
   - name: dockersock
